[refactor] Java11: use Files.readString() Files.writeString()